add fetching rewards concurrently

--- a/src/main/resources/config/application-dev.yaml
+++ b/src/main/resources/config/application-dev.yaml
@@ -44,4 +44,7 @@ spring:
           batch_size: 100
 
 application:
-  network: ${SCHEMA:mainet}
+  network: ${KOIOS_NETWORK:mainet}
+  reward:
+    fixed-thread-pool-size:  ${FIXED_THEAD_POOL_SIZE:20}
+    list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
