--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,12 @@
-SPRING_PROFILES_ACTIVE=prod
-
+SPRING_PROFILES_ACTIVE=dev
+SERVER_PORT:8888
 HOST=localhost
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_SCHEMA=
+POSTGRES_USER=cardano_read
+POSTGRES_PASSWORD=123456
+POSTGRES_DB=explorer
+SCHEMA=mainnet
 
-BOOTSTRAP_SERVER=localhost:9092
-
-CARDANO_CLI_DELAY=10
-CRAWL_POOL_DATA_DELAY=172800000
-INSERT_POOL_DATA_DELAY=180000
-
-NETWORK_MAGIC=1
-MAGIC_PARAM=--testnet-magic
-
-EPOCH_STAKE_TOPIC=dev.preprod.cli.epoch.stake
-EPOCH_PARAM=epoch-param
-
-REWARD=reward
-DOCKER_HOST=unix:///var/run/docker.sock
-IMAGE_ID=
-
-NETWORK_NAME=preprod
-CARDANO_NODE_SOCKET_PATH=/ipc/node.socket
-
-DOCKER_CONTAINER_NAME=cardano-node-preprod
-
-REDIS_MASTER_NAME=mymaster
-REDIS_SENTINEL_PASS=
-REDIS_SENTINEL_HOST=localhost
+FIXED_THEAD_POOL_SIZE: 10
+LIST_SIZE_EACH_THREAD: 5
