--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <version.explorer-common>0.1.1-SNAPSHOT</version.explorer-common>
     <version.explorer-consumer-common>0.1.1-SNAPSHOT</version.explorer-consumer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
+    <version.flyway>9.4.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
     <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
     <version.jacoco-maven-plugin>0.8.8</version.jacoco-maven-plugin>
@@ -99,6 +100,11 @@
       <version>${koios-java-client.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>${version.flyway}</version>
+    </dependency>
   </dependencies>
 
   <build>
