--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -42,9 +42,16 @@ spring:
         format_sql: true
         jdbc:
           batch_size: 100
-
+  task:
+    execution:
+      pool:
+        max-size: ${POOL_MAX_SIZE:12}
+        core-size: ${POOL_CORE_SIZE:12}
+        queue-capacity: ${QUEUE_CAPACITY:50}
+      thread-name-prefix: Executorxx-
 application:
-  network: ${SCHEMA:mainet}
+  network: ${SCHEMA:mainnet}
   reward:
-    fixed-thread-pool-size:  ${FIXED_THEAD_POOL_SIZE:10}
+    list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+  epoch-stake:
     list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
