--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
 SPRING_PROFILES_ACTIVE=dev
-SERVER_PORT:8888
-HOST=localhost
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=cardano_read
-POSTGRES_PASSWORD=123456
-POSTGRES_DB=explorer
-SCHEMA=mainnet
+SERVER_PORT=8888
 
-FIXED_THEAD_POOL_SIZE: 10
-LIST_SIZE_EACH_THREAD: 5
+NETWORK=mainnet
+
+POSTGRES_HOST=10.4.18.140
+POSTGRES_PORT=54322
+POSTGRES_USER=cardano-master
+POSTGRES_PASSWORD=postgres_master_pw
+POSTGRES_DB=explorer
+POSTGRES_SCHEMA=mainnet
+
+LIST_SIZE_EACH_THREAD=5
+
+POOL_MAX_SIZE=12
+POOL_CORE_SIZE=10
+
+FLYWAY_ENABLE=false
+FLYWAY_VALIDATE=false
