--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ HELP.md
 !*.*
 target/
 !.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.properties
 !**/src/main/**/target/
 !**/src/test/**/target/
 mvn
-*.cmd
 
 ### STS ###
 .apt_generated
@@ -36,9 +36,6 @@ build/
 
 ### VS Code ###
 .vscode/
-/.mvn/wrapper/maven-wrapper.jar
-/.mvn/wrapper/maven-wrapper.properties
-/mvnw
 /logs/
 
 !Dockerfile
