--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <koios-java-client.version>1.17.2</koios-java-client.version>
     <version.ledgersync-common>0.1.0-SNAPSHOT</version.ledgersync-common>
     <version.explorer-common>0.1.1-SNAPSHOT</version.explorer-common>
-    <version.explorer-consumer-common>0.1.2</version.explorer-consumer-common>
+    <version.explorer-consumer-common>0.1.4-SNAPSHOT-PR37</version.explorer-consumer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
     <version.flyway>9.4.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
@@ -61,11 +61,7 @@
       <artifactId>common</artifactId>
       <version>${version.ledgersync-common}</version>
     </dependency>
-    <dependency>
-      <groupId>org.cardanofoundation.explorer</groupId>
-      <artifactId>common</artifactId>
-      <version>${version.explorer-common}</version>
-    </dependency>
+
     <dependency>
       <groupId>org.cardanofoundation.explorer</groupId>
       <artifactId>consumer-common</artifactId>
@@ -203,5 +199,24 @@
       </plugins>
     </pluginManagement>
   </build>
+
+  <repositories>
+    <repository>
+      <id>gitlab-maven</id>
+      <url>https://pro.gitlab.metadata.dev.cf-deployments.org/api/v4/projects/2/packages/maven</url>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <repository>
+      <id>gitlab-maven</id>
+      <url>https://pro.gitlab.metadata.dev.cf-deployments.org/api/v4/projects/2/packages/maven</url>
+    </repository>
+
+    <snapshotRepository>
+      <id>gitlab-maven</id>
+      <url>https://pro.gitlab.metadata.dev.cf-deployments.org/api/v4/projects/2/packages/maven</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
