fix: change flow to avoid data collision error

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ POOL_CORE_SIZE=10
 
 FLYWAY_ENABLE=false
 FLYWAY_VALIDATE=false
+
+REWARD_PARALLEL_SAVING_ENABLED=true
+REWARD_SUB_LIST_SIZE=500
+REWARD_PARALLEL_SAVING_THREAD_NUM=10
+EPOCH_STAKE_PARALLEL_SAVING_ENABLED=true
+EPOCH_STAKE_SUB_LIST_SIZE=500
+EPOCH_STAKE_PARALLEL_SAVING_THREAD_NUM=10
