--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -61,9 +61,18 @@ spring:
     sql-migration-suffixes: .sql
     locations: db/migration/dev/final/
     validate-on-migrate: ${FLYWAY_VALIDATE:false}
+
 application:
   network: ${NETWORK:mainnet}
   reward:
     list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+    parallel-saving:
+      enabled: ${REWARD_PARALLEL_SAVING_ENABLED:true}
+      reward-sub-list-size: ${REWARD_SUB_LIST_SIZE:500}
+      thread-num: ${REWARD_PARALLEL_SAVING_THREAD_NUM:10}
   epoch-stake:
     list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+    parallel-saving:
+      enabled: ${EPOCH_STAKE_PARALLEL_SAVING_ENABLED:true}
+      epoch-stake-sub-list-size: ${EPOCH_STAKE_SUB_LIST_SIZE:500}
+      thread-num: ${EPOCH_STAKE_PARALLEL_SAVING_THREAD_NUM:10}
