chore: update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,5 @@ services:
       - EPOCH_STAKE_PARALLEL_SAVING_ENABLED=${EPOCH_STAKE_PARALLEL_SAVING_ENABLED}
       - EPOCH_STAKE_SUB_LIST_SIZE=${EPOCH_STAKE_SUB_LIST_SIZE}
       - EPOCH_STAKE_PARALLEL_SAVING_THREAD_NUM=${EPOCH_STAKE_PARALLEL_SAVING_THREAD_NUM}
+    ports:
+      - ${SERVER_PORT}:${SERVER_PORT}
