feat: add sub list size property for fetching pool info data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_SCHEMA=${POSTGRES_SCHEMA}
+      - REWARD_LIST_SIZE_EACH_THREAD=${REWARD_LIST_SIZE_EACH_THREAD}
+      - EPOCH_STAKE_LIST_SIZE_EACH_THREAD=${EPOCH_STAKE_LIST_SIZE_EACH_THREAD}
+      - POOL_INFO_LIST_SIZE_EACH_THREAD=${POOL_INFO_LIST_SIZE_EACH_THREAD}
       - LIST_SIZE_EACH_THREAD=${LIST_SIZE_EACH_THREAD}
       - POOL_MAX_SIZE=${POOL_MAX_SIZE}
       - POOL_CORE_SIZE=${POOL_CORE_SIZE}
