--- a/src/main/resources/config/application-prod.yaml
+++ b/src/main/resources/config/application-prod.yaml
@@ -68,3 +68,5 @@ application:
     list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
   epoch-stake:
     list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+  pool-info:
+    list-size-each-thread: ${POOL_INFO_LIST_SIZE_EACH_THREAD:500}
