--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -51,7 +51,7 @@ spring:
       thread-name-prefix: Executorxx-
   ## Flyway config
   flyway:
-    enabled: ${FLYWAY_ENABLE:true}
+    enabled: ${FLYWAY_ENABLE:false}
     url: ${spring.datasource.url}
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
@@ -67,8 +67,8 @@ spring:
 application:
   network: ${NETWORK:mainnet}
   reward:
-    list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+    list-size-each-thread: ${REWARD_LIST_SIZE_EACH_THREAD:5}
   epoch-stake:
-    list-size-each-thread: ${LIST_SIZE_EACH_THREAD:5}
+    list-size-each-thread: ${EPOCH_STAKE_LIST_SIZE_EACH_THREAD:5}
   pool-info:
     list-size-each-thread: ${POOL_INFO_LIST_SIZE_EACH_THREAD:500}
