--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local, koios}
 server.port= ${SERVER_PORT:8888}
