--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <koios-java-client.version>1.17.2</koios-java-client.version>
     <version.ledgersync-common>0.1.0-SNAPSHOT</version.ledgersync-common>
     <version.explorer-common>0.1.1-SNAPSHOT</version.explorer-common>
-    <version.explorer-consumer-common>0.1.4-SNAPSHOT-PR41</version.explorer-consumer-common>
+    <version.explorer-consumer-common>0.1.4-PR61</version.explorer-consumer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
     <version.flyway>9.4.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
