--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <version.sonarcube-maven-plugin>3.9.1.2184</version.sonarcube-maven-plugin>
     <version.maven-site-plugin>4.0.0-M2</version.maven-site-plugin>
     <version.maven-project-info-reports-plugin>3.3.0</version.maven-project-info-reports-plugin>
+    <version.test-containers>1.17.3</version.test-containers>
   </properties>
 
   <dependencyManagement>
@@ -38,6 +39,13 @@
         <artifactId>spring-boot-dependencies</artifactId>
         <type>pom</type>
         <version>${version.spring-boot}</version>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${version.test-containers}</version>
+        <type>pom</type>
         <scope>import</scope>
       </dependency>
     </dependencies>
@@ -101,6 +109,25 @@
       <artifactId>flyway-core</artifactId>
       <version>${version.flyway}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -117,6 +144,44 @@
           </excludes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq-codegen-maven</artifactId>
+        <version>3.17.10</version>
+        <executions>
+          <execution>
+            <id>jooq-codegen</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <jdbc>
+            <driver>org.postgresql.Driver</driver>
+            <url>jdbc:postgresql://10.4.10.112:54321/explorer?currentSchema=mainnet</url>
+            <user>huylevan</user>
+            <password>secret_huylevan</password>
+          </jdbc>
+          <generator>
+            <database>
+              <name>org.jooq.meta.postgres.PostgresDatabase</name>
+              <includes>.*</includes>
+              <excludes></excludes>
+              <!-- In case your database supports catalogs, e.g. SQL Server:
+              <inputCatalog>public</inputCatalog>
+                -->
+              <inputSchema>mainnet</inputSchema>
+            </database>
+            <target>
+              <packageName>com.cardanofoundation.explorer.rewards.model</packageName>
+              <directory>target/generated-sources/jooq</directory>
+            </target>
+          </generator>
+        </configuration>
+      </plugin>
+
     </plugins>
     <pluginManagement>
       <plugins>
