chore(gha): enable develop branch trigger for the publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -57,12 +57,25 @@ jobs:
             echo "ARTIFACT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-PR${PR_NUMBER}" >> "$GITHUB_ENV"
             echo "DOCKER_LATEST_IMAGE_TAG=" >> "$GITHUB_ENV"
           else
+            # Make sure develop branch artifacts include SNAPSHOT
+            BRANCH=${GITHUB_REF##*/}
+            CURRENT_VERSION=$(xq -r .project.version pom.xml)
+            if [[ "${BRANCH}" == "develop" ]] && [[ "${CURRENT_VERSION}" =~ .*-SNAPSHOT$ ]]
+            then
+              echo "DEVELOP_SNAPSHOT_OK=true" >> "$GITHUB_OUTPUT"
+            fi
+
             echo "ARTIFACT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> "$GITHUB_ENV"
             echo "DOCKER_LATEST_IMAGE_TAG=${{ env.PRIVATE_DOCKER_REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest" >> "$GITHUB_ENV"
+
           fi
+
 
       - name: Docker Login
         uses: docker/login-action@v2
+        if: |
+          github.ref == 'refs/heads/master' ||
+          steps.artifacts-version.outputs.DEVELOP_SNAPSHOT_OK == 'true'
         with:
           registry: ${{ env.PRIVATE_DOCKER_REGISTRY_URL }}
           username: ${{ env.PRIVATE_DOCKER_REGISTRY_USER }}
@@ -70,6 +83,9 @@ jobs:
 
       - name: Build and Push docker image
         uses: docker/build-push-action@v4
+        if: |
+          github.ref == 'refs/heads/master' ||
+          steps.artifacts-version.outputs.DEVELOP_SNAPSHOT_OK == 'true'
         with:
           context: .
           push: true
