--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -76,7 +76,7 @@ jobs:
         uses: docker/login-action@v2
         if: |
           github.ref == 'refs/heads/master' ||
-          steps.artifacts-version.outputs.DEVELOP_SNAPSHOT_OK == 'true'
+          steps.metadata.outputs.DEVELOP_SNAPSHOT_OK == 'true'
         with:
           registry: ${{ env.PRIVATE_DOCKER_REGISTRY_URL }}
           username: ${{ env.PRIVATE_DOCKER_REGISTRY_USER }}
@@ -86,7 +86,7 @@ jobs:
         uses: docker/build-push-action@v4
         if: |
           github.ref == 'refs/heads/master' ||
-          steps.artifacts-version.outputs.DEVELOP_SNAPSHOT_OK == 'true'
+          steps.metadata.outputs.DEVELOP_SNAPSHOT_OK == 'true'
         with:
           context: .
           push: true
