--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <koios-java-client.version>1.17.2</koios-java-client.version>
     <version.ledgersync-common>0.1.0-SNAPSHOT</version.ledgersync-common>
     <version.explorer-common>0.1.1-SNAPSHOT</version.explorer-common>
-    <version.explorer-consumer-common>0.1.4-PR64</version.explorer-consumer-common>
+    <version.explorer-consumer-common>0.1.5-SNAPSHOT</version.explorer-consumer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
     <version.flyway>9.4.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
@@ -30,6 +30,9 @@
     <version.maven-site-plugin>4.0.0-M2</version.maven-site-plugin>
     <version.maven-project-info-reports-plugin>3.3.0</version.maven-project-info-reports-plugin>
     <version.test-containers>1.17.3</version.test-containers>
+    <version.jooq-codegen-maven>3.17.10</version.jooq-codegen-maven>
+    <version.org.codehaus.gmaven>2.1.1</version.org.codehaus.gmaven>
+    <version.properties-maven-plugin>1.1.0</version.properties-maven-plugin>
   </properties>
 
   <dependencyManagement>
@@ -145,9 +148,27 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>${version.properties-maven-plugin}</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>read-project-properties</goal>
+            </goals>
+            <configuration>
+              <files>
+                <file>src/main/resources/jooq-code-gen.properties</file>
+              </files>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.jooq</groupId>
         <artifactId>jooq-codegen-maven</artifactId>
-        <version>3.17.10</version>
+        <version>${version.jooq-codegen-maven}</version>
         <executions>
           <execution>
             <id>jooq-codegen</id>
@@ -160,19 +181,16 @@
         <configuration>
           <jdbc>
             <driver>org.postgresql.Driver</driver>
-            <url>jdbc:postgresql://10.4.10.112:54321/explorer?currentSchema=mainnet</url>
-            <user>huylevan</user>
-            <password>secret_huylevan</password>
+            <url>${env.db.url}</url>
+            <user>${env.db.username}</user>
+            <password>${env.db.password}</password>
           </jdbc>
           <generator>
             <database>
               <name>org.jooq.meta.postgres.PostgresDatabase</name>
               <includes>.*</includes>
               <excludes></excludes>
-              <!-- In case your database supports catalogs, e.g. SQL Server:
-              <inputCatalog>public</inputCatalog>
-                -->
-              <inputSchema>mainnet</inputSchema>
+              <inputSchema>${env.db.schema}</inputSchema>
             </database>
             <target>
               <packageName>com.cardanofoundation.explorer.rewards.model</packageName>
