--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <name>cardano-explorer-rewards</name>
   <packaging>jar</packaging>
   <description>Explorer Reward.</description>
-
   <properties>
     <version.java>17</version.java>
     <version.lombok>1.18.26</version.lombok>
@@ -27,6 +26,10 @@
     <version.sonarcube-maven-plugin>3.9.1.2184</version.sonarcube-maven-plugin>
     <version.maven-site-plugin>4.0.0-M2</version.maven-site-plugin>
     <version.maven-project-info-reports-plugin>3.3.0</version.maven-project-info-reports-plugin>
+    <version.test-containers>1.17.3</version.test-containers>
+    <version.jooq-codegen-maven>3.17.10</version.jooq-codegen-maven>
+    <version.org.codehaus.gmaven>2.1.1</version.org.codehaus.gmaven>
+    <version.properties-maven-plugin>1.1.0</version.properties-maven-plugin>
   </properties>
 
   <dependencyManagement>
@@ -36,6 +39,13 @@
         <artifactId>spring-boot-dependencies</artifactId>
         <type>pom</type>
         <version>${version.spring-boot}</version>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${version.test-containers}</version>
+        <type>pom</type>
         <scope>import</scope>
       </dependency>
     </dependencies>
@@ -98,6 +108,25 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>${version.flyway}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
