[MET-1340] Add Mutation Tests to the cf-explorer-rewards repository

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,28 @@
           <artifactId>sonar-maven-plugin</artifactId>
           <version>${version.sonarcube-maven-plugin}</version>
         </plugin>
+        <plugin>
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <configuration>
+            <features>
+              <feature>+auto_threads</feature>
+            </features>
+            <targetClasses>
+              <param>org.cardanofoundation.explorer.rewards.*</param>
+            </targetClasses>
+            <targetTests>
+              <param>org.cardanofoundation.explorer.rewards.*</param>
+            </targetTests>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.pitest</groupId>
+              <artifactId>pitest-junit5-plugin</artifactId>
+              <version>1.1.1</version>
+            </dependency>
+          </dependencies>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
