feat: add pool info data job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,7 @@ services:
       - POOL_CORE_SIZE=${POOL_CORE_SIZE}
       - FLYWAY_ENABLE=${FLYWAY_ENABLE}
       - FLYWAY_VALIDATE=${FLYWAY_VALIDATE}
+      - POOL_INFO_DATA_JOB_ENABLED=${POOL_INFO_DATA_JOB_ENABLED}
+      - FETCH_AND_SAVE_POOL_INFO_DATA_DELAY=${FETCH_AND_SAVE_POOL_INFO_DATA_DELAY}
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
