--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,16 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.retry</groupId>
+      <artifactId>spring-retry</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
@@ -107,6 +117,7 @@
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jooq</artifactId>
+<!--      <version>3.15.3</version>-->
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
