--- a/src/main/resources/config/application-dev.yaml
+++ b/src/main/resources/config/application-dev.yaml
@@ -66,6 +66,8 @@ spring:
     out-of-order: true
 application:
   network: ${NETWORK:mainnet}
+  koios-base-url-enabled: ${KOIOS_BASE_URL_ENABLED:false}
+  koios-base-url: ${KOIOS_BASE_URL:https://api.koios.rest/api/v0/}
   reward:
     list-size-each-thread: ${REWARD_LIST_SIZE_EACH_THREAD:5}
   epoch-stake:
