--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,7 @@ services:
       - FLYWAY_VALIDATE=${FLYWAY_VALIDATE}
       - POOL_INFO_DATA_JOB_ENABLED=${POOL_INFO_DATA_JOB_ENABLED}
       - FETCH_AND_SAVE_POOL_INFO_DATA_DELAY=${FETCH_AND_SAVE_POOL_INFO_DATA_DELAY}
+      - KOIOS_BASE_URL_ENABLED=${KOIOS_BASE_URL_ENABLED}
+      - KOIOS_BASE_URL=${KOIOS_BASE_URL}
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
