--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,7 +6,7 @@ on:
       - main
       - develop
   pull_request:
-    types: [ opened, synchronize ]
+    types: [opened, synchronize]
   workflow_dispatch:
 
 env:
@@ -23,7 +23,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: |
       "contains(github.event.head_commit.message, 'release-please--branches--main')" ||
       ${{ github.event_name == 'pull_request' }}
@@ -34,8 +34,8 @@ jobs:
       - name: Setup JDK 18
         uses: actions/setup-java@v3
         with:
-          java-version: '18'
-          distribution: 'temurin'
+          java-version: "18"
+          distribution: "temurin"
           cache: maven
 
       - name: Setup depends
@@ -71,7 +71,6 @@ jobs:
             echo "DOCKER_LATEST_IMAGE_TAG=${{ env.PRIVATE_DOCKER_REGISTRY_URL }}/${DOCKER_IMAGE_NAME}:latest" >> "$GITHUB_ENV"
 
           fi
-
 
       - name: Docker Login
         uses: docker/login-action@v2
