--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Create a new Release
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 
   workflow_dispatch:
 
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   create_release:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: 🚀 release-please-action
         uses: google-github-actions/release-please-action@v3
