chore: add badge upload and conventional commits badge

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,6 +42,25 @@ jobs:
         run: |
           mvn --batch-mode --update-snapshots test
 
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2
+        with:
+          generate-branches-badge: true
+          generate-summary: true
+          badges-directory: build/reports/jacoco/test/html/badges
+
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+
+      - name: Publish coverage report to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        if: github.ref == 'refs/heads/main'
+        with:
+          BRANCH: gh-pages
+          folder: build/reports/jacoco/test/html
+
   mutation-test:
     needs: test
     runs-on: self-hosted
