--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <version.maven-site-plugin>4.0.0-M2</version.maven-site-plugin>
     <version.maven-project-info-reports-plugin>3.3.0</version.maven-project-info-reports-plugin>
     <version.test-containers>1.17.3</version.test-containers>
+    <version.spotless-maven-plugin>2.36.0</version.spotless-maven-plugin>
+    <version.google-java-format>1.15.0</version.google-java-format>
   </properties>
 
   <dependencyManagement>
@@ -229,6 +231,39 @@
             <version>1.1.1</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>${version.spotless-maven-plugin}</version>
+        <configuration>
+          <java>
+            <excludes>
+              <exclude>build/**/*.java</exclude>
+            </excludes>
+            <removeUnusedImports/>
+            <replaceRegex>
+              <name>Remove wildcard imports</name>
+              <searchRegex>import\\s+[^\\*\\s]+\\*;(\\r\\n|\\r|\\n)</searchRegex>
+              <replacement>$1</replacement>
+            </replaceRegex>
+            <googleJavaFormat>
+              <version>${version.google-java-format}</version>
+              <style>GOOGLE</style>
+            </googleJavaFormat>
+            <importOrder>
+              <order>
+                java,jakarta,javax,lombok,org.springframework,,\\#,org.junit,\\#org.junit,org.cardanofoundation,\\#org.cardanofoundation
+              </order>
+            </importOrder>
+            <indent>
+              <spaces>true</spaces>
+              <spacesPerTab>2</spacesPerTab>
+            </indent>
+            <trimTrailingWhitespace/>
+            <endWithNewline/>
+          </java>
+        </configuration>
       </plugin>
     </plugins>
   </build>
