feat: MET-1956 add bearerToken option for backendService

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,6 @@ services:
       - FETCH_AND_SAVE_POOL_INFO_DATA_DELAY=${FETCH_AND_SAVE_POOL_INFO_DATA_DELAY}
       - KOIOS_BASE_URL_ENABLED=${KOIOS_BASE_URL_ENABLED}
       - KOIOS_BASE_URL=${KOIOS_BASE_URL}
+      - KOIOS_AUTH_TOKEN=${KOIOS_AUTH_TOKEN}
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
