--- a/src/main/resources/config/application-dev.yaml
+++ b/src/main/resources/config/application-dev.yaml
@@ -68,6 +68,8 @@ application:
   network: ${NETWORK:mainnet}
   koios-base-url-enabled: ${KOIOS_BASE_URL_ENABLED:false}
   koios-base-url: ${KOIOS_BASE_URL:https://api.koios.rest/api/v0/}
+  koios-auth-token: ${KOIOS_AUTH_TOKEN}
+
   reward:
     list-size-each-thread: ${REWARD_LIST_SIZE_EACH_THREAD:5}
   epoch-stake:
