--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
     <version.lombok>1.18.26</version.lombok>
     <org.projectlombok.version>1.18.24</org.projectlombok.version>
     <koios-java-client.version>1.17.2</koios-java-client.version>
-    <version.ledgersync-common>0.1.0-SNAPSHOT</version.ledgersync-common>
-    <version.explorer-common>0.1.1-SNAPSHOT</version.explorer-common>
-    <version.explorer-consumer-common>0.1.12</version.explorer-consumer-common>
+    <version.explorer-common>0.1.16-SNAPSHOT-PR173</version.explorer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
     <version.flyway>9.16.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
@@ -62,15 +60,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.cardanofoundation.ledgersync</groupId>
-      <artifactId>common</artifactId>
-      <version>${version.ledgersync-common}</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.cardanofoundation.explorer</groupId>
-      <artifactId>consumer-common</artifactId>
-      <version>${version.explorer-consumer-common}</version>
+      <artifactId>common</artifactId>
+      <version>${version.explorer-common}</version>
     </dependency>
 
     <dependency>
