--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Publish mutation test report to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
-        if: always()
+        if: github.ref == 'refs/heads/main'
         with:
           BRANCH: gh-pages
           folder: target/pit-reports/
