--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version.lombok>1.18.26</version.lombok>
     <org.projectlombok.version>1.18.24</org.projectlombok.version>
     <koios-java-client.version>1.18.1</koios-java-client.version>
-    <version.explorer-common>0.1.16-SNAPSHOT-PR173</version.explorer-common>
+    <version.explorer-common>0.9.0-PR203</version.explorer-common>
     <version.spring-boot>3.0.5</version.spring-boot>
     <version.flyway>9.16.0</version.flyway>
     <version.maven-compiler-plugin>3.10.0</version.maven-compiler-plugin>
